@@ -1,3 +1,11 @@
+2003-07-09  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
+
+	* w3m.el (w3m-uri-replace-alist): Add `rpm', `waei', `eiwa',
+	`kokugo' and `eiei'.
+	(w3m-input-url): Do not encode its return value.
+	(w3m-goto-url): Call `w3m-url-transfer-encode-string' to encode a
+	given URL.
+
 2003-07-05  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
 
 	* w3m.el (emacs-w3m-version): Release 1.3.5.
